using maven's default way to skip tests

--- a/wiki/HowToBuildProject.wiki
+++ b/wiki/HowToBuildProject.wiki
@@ -28,10 +28,10 @@ Once you have Subversion installed, you can go and fetch the latest source code:
 Then you can go into that directory, and have maven build the project:
 
 cd facebook-java-read-only
-mvn install -Dtest.skip=true
+mvn install -DskipTests=true
 
 Please be patient the first time you run it; it will take a while.  The reason is that Maven will go and download a lot of libraries and dependencies and bring them into your local machine ({HOME}/.m2/repository }.  The bad news is that it takes a while to download, the good news is that once they are local, it won't have to re-download them and they are easily re-used whenever any other maven project requires those libraries; so it gets faster.
 
-Normally, maven would run the unit tests during the build; the "-Dtest.skip=true" disables that to make your build go faster, and because you have to do a few more things to be able to setup for the UnitTests.
+Normally, maven would run the unit tests during the build; the "-DskipTests=true" disables that to make your build go faster, and because you have to do a few more things to be able to setup for the UnitTests.
 
 If you use maven and just wanted to build the trunk, then you're done.  If you don't use maven then you're wondering where the .zip file with all of the jar files you need is.  To generate that you have to do a few more things, which I'll describe below.  Essentially, we have to ask maven to collect not only the project jar files, but all of the dependencies as well.
