--- a/wiki/HowToBuildProject.wiki
+++ b/wiki/HowToBuildProject.wiki
@@ -1,5 +1,5 @@
 #summary Describing how to build this project from source
-#labels Phase-Implementation,Featured
+#labels Phase-Implementation
 
 = Caveat =
 
