Edited wiki page OldHomePage through web user interface.

--- a/wiki/OldHomePage.wiki
+++ b/wiki/OldHomePage.wiki
@@ -1,3 +1,4 @@
+#labels Featured
 === Summary ===
 
 A Facebook API client implemented in Java, originally derived from the official Facebook client.
